docs: documenting user endpoints
