# MRFerreira.API/app/Http/Controllers/User/UserController.php
@@ -22,8 +22,51 @@ use Illuminate\Http\Resources\Json\{
 };
 use Symfony\Component\HttpFoundation\Response as HttpResponse;
 
+/**
+ * @OA\Tag(
+ *     name="Users",
+ * )
+ */
 class UserController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/api/users",
+     *     tags={"Users"},
+     *     summary="Listar usuários",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="id", type="integer"),
+     *                     @OA\Property(property="name", type="string"),
+     *                     @OA\Property(property="email", type="string"),
+     *                     @OA\Property(property="created_at", type="string"),
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                 )
+     *             )
+     *         }
+     *     ),
+     * )
+     */
     public function index(): AnonymousResourceCollection
     {
         $users = User::all();
@@ -31,6 +74,69 @@ class UserController extends Controller
         return IndexResource::collection($users);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/users",
+     *     tags={"Users"},
+     *     summary="Cadastrar um novo usuário",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="Usuário 1"),
+     *             @OA\Property(property="email", type="string", example="email@example.com"),
+     *             @OA\Property(property="password", type="string", example="1a2b3c"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Created",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer"),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Content",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                     @OA\Property(
+     *                         property="errors",
+     *                         type="object",
+     *                         @OA\Property(
+     *                             property="field",
+     *                             type="array",
+     *                             items=@OA\Items(type="string")
+     *                         )
+     *                     )
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     security={{"bearerAuth": {}}}
+     * )
+     */
     public function store(StoreRequest $request): JsonResponse
     {
         $validated = $request->validated();
@@ -48,11 +154,125 @@ class UserController extends Controller
         ], HttpResponse::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/users/{user}",
+     *     tags={"Users"},
+     *     summary="Visualizar os dados de um usuário",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                     @OA\Property(property="id", type="integer"),
+     *                     @OA\Property(property="name", type="string"),
+     *                     @OA\Property(property="email", type="string"),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string")
+     *                 )
+     *             )
+     *         }
+     *     )
+     * )
+     */
     public function show(User $user): JsonResource
     {
         return app(ShowResource::class, ['resource' => $user]);
     }
 
+    /**
+     * @OA\Patch(
+     *     path="/api/users/{user}",
+     *     tags={"Users"},
+     *     summary="Atualizar um usuário",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string", example="Usuário 1"),
+     *             @OA\Property(property="email", type="string", example="email@example.com"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="No Content",
+     *         @OA\JsonContent(type="object", additionalProperties=false)
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string")
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Content",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                     @OA\Property(
+     *                         property="errors",
+     *                         type="object",
+     *                         @OA\Property(
+     *                             property="field",
+     *                             type="array",
+     *                             items=@OA\Items(type="string")
+     *                         )
+     *                     )
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     security={{"bearerAuth": {}}}
+     * )
+     */
     public function patch(PatchRequest $request, User $user): Response
     {
         $validated = $request->validated();
@@ -62,6 +282,51 @@ class UserController extends Controller
         return response()->noContent();
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/api/users/{user}",
+     *     tags={"Users"},
+     *     summary="Deletar um usuário",
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="No Content",
+     *         @OA\JsonContent(type="object", additionalProperties=false)
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string"),
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not Found",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                 @OA\Schema(
+     *                     type="object",
+     *                     @OA\Property(property="message", type="string")
+     *                 )
+     *             )
+     *         }
+     *     ),
+     *     security={{"bearerAuth": {}}}
+     * )
+     */
     public function destroy(User $user): Response
     {
         $user->delete();
